--- a/source/index.html
+++ b/source/index.html
@@ -28,6 +28,19 @@
                             <a class="reserva" href="">Reservar</a>
                             <div style="clear: both;"></div>
                         </div>
+
+                        <div id="menu">
+                            <ul id="navegaçao"> 
+                                <li><a href="">Home</a></li>
+                                <li><a href="">Story</a></li>
+                                <li><a href="">Company</a></li>
+                                <li><a href="">Gastronomy</a></li>
+                                <li><a href="">Contact</a></li>
+                            </ul>
+                            <img class="depoimento" src="../assets/depoimento.png">
+                        </div>
+    
+
                     </div>
                 </div>
 
