adição da area de conteudo e finalização

--- a/source/index.html
+++ b/source/index.html
@@ -40,11 +40,68 @@
                             <img class="depoimento" src="../assets/depoimento.png">
                         </div>
     
-
                     </div>
                 </div>
 
             </div> <!--/ fim topo-->
+
+            <div id="area-principal">
+                <div class="conteudo">
+                    <h2>Morbi aliquam luctus neque eget porttitor</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. In id bibendum lacus, id auctor neque. Nullam sed tellus egestas, sagittis mauris id, feugiat nunc. In dignissim sit amet enim et efficitur. Ut sed condimentum massa. Aliquam condimentum lectus et nunc fermentum rhoncus. Maecenas euismod nec ligula sit amet venenatis. Quisque et ligula velit.
+                    </p>
+                    <p>
+                        Etiam mollis, felis ac volutpat eleifend, augue purus ultrices metus, et cursus tellus ex ut enim. Sed ullamcorper neque ex, vel molestie tortor feugiat non. n et ornare mi, id congue mauris. Phasellus non aliquet turpis. Etiam cursus leo nec dui egestas vulputate. Sed ante velit, tincidunt non lacus non, placerat aliquam neque. Sed egestas est id tortor vestibulum, quis elementum orci volutpat.
+                    </p>
+                    <p>
+                        Curabitur congue eros tellus, quis ullamcorper mauris elementum eget. Curabitur erat nibh, dictum dictum condimentum semper, laoreet non tellus. Ut a ultricies ante. Pellentesque vulputate, ipsum et porttitor auctor, eros dolor mollis neque, nec tempus urna urna vitae dolor. Phasellus a consectetur quam, eget vulputate est.
+                    </p>
+                </div>
+            </div>
+
+            <div id="area-lateral">
+                <div class="conteudo">
+                    <ul id="beneficios">
+                        <li>
+                            <a href="">
+                                <img src="../assets/apartamento.jpg" alt="apartamento">
+                                <h3>Apartamentos</h3>
+                                <p>
+                                    Vivamus hendrerit leo vel lacus molestie, vulputate luctus purus finibus. Fusce sagittis arcu nec nibh porttitor bibendum. In et ornare mi, id congue mauris.
+                                </p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <img src="../assets/restaurante.jpg" alt="restaurante">
+                                <h3>Restaurantes</h3>
+                                <p>
+                                    Vivamus hendrerit leo vel lacus molestie, vulputate luctus purus finibus. Fusce sagittis arcu nec nibh porttitor bibendum. In et ornare mi, id congue mauris.
+                                </p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="">
+                                <img src="../assets/piscina.jpg" alt="piscina">
+                                <h3>Piscinas</h3>
+                                <p>
+                                    Vivamus hendrerit leo vel lacus molestie, vulputate luctus purus finibus. Fusce sagittis arcu nec nibh porttitor bibendum. In et ornare mi, id congue mauris.
+                                </p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="rodape">
+                <span>
+                    &copy; Copyright 2000-2021 Chalé Hotel
+                </span>
+            </div>
+
         </div> <!--/ fim container-->
 
     </body>
